cmake_minimum_required(VERSION 3.21)
project(Lion001)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(ConstPointer Cpp_Primer_Plus/const/ConstAndPointer.cpp)
add_executable(Reference Cpp_Primer_Plus/Function/Reference.cpp)
add_executable(RefAndFunction Cpp_Primer_Plus/Function/RefAndFunction.cpp)
add_executable(RefAndConst Cpp_Primer_Plus/Function/RefAndConst.cpp)
add_executable(StdDeque Cpp_Primer_Plus/DataStructure/StdDeque.cpp)
add_executable(Lambda Cpp_Primer_Plus/Lambda/LambdaExpr.cpp)
add_executable(Array Cpp_Primer_Plus/DataStructure/Array.cpp)
add_executable(Vector Cpp_Primer_Plus/DataStructure/Vector.cpp)
add_executable(List Cpp_Primer_Plus/DataStructure/List.cpp)
add_executable(Forward_list Cpp_Primer_Plus/DataStructure/Forward_list.cpp)
add_executable(Queue Cpp_Primer_Plus/DataStructure/Queue.cpp)
add_executable(Priority Cpp_Primer_Plus/DataStructure/Priority.cpp)
add_executable(Heap Cpp_Primer_Plus/DataStructure/Heap.cpp)
add_executable(Stack Cpp_Primer_Plus/DataStructure/Stack.cpp)
add_executable(Map Cpp_Primer_Plus/DataStructure/Map.cpp)
add_executable(Set Cpp_Primer_Plus/DataStructure/Set.cpp)
add_executable(Graph Cpp_Primer_Plus/Graph/Graph.cpp)
add_executable(findRedundant LeetCode/Graph/findRedundant.cpp)
